# v5

./: .gitignore  CODE_OF_CONDUCT.md  ENDPOINTS.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  security.yml!
docs/: AppLogic Concept.md  Changes.md  Filesystem.md  Frontend Structure.md  Getting Started Making Apps.md  Getting Started.md  Making Apps.md  Welcome.md
public/: mode
public/lang/: en-US.json  nl-NL.json
src/: App.svelte  Cursor.svelte  main.ts  sideload.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: spinner.css
src/assets/apps/: mediaplayer.css
src/assets/cursors/: alt.cur  beam.cur  default.cur  forbidden.cur  hand.cur  help.cur  precise.cur
src/css/: arctermonly.css  boot.css  bugrep.css  cursors.css  desktop.css  devbar.css  discontinued.css  fts.css  login.css  main.css  mbb.css  newlogin.css  progress.css  serverselect.css
src/css/cursors/: imports.css
src/css/desktop/: actioncenter.css  arcfind.css  chooseroverlay.css  contextmenu.css  desktopicons.css  launcher.css  newtaskbar.css  notification.css  ude.css  (+8 more)
src/desktop/: updates.ts
src/lib/: APIReveal.svelte  BugReport.svelte  Cursor.svelte  DevBar.svelte  MobileBlock.svelte  ProfilePicture.svelte  Spinner.svelte
src/tauri/: updates.ts
src/ts/: GitHubAPI.d.ts  base64.ts  branding.ts  bugrep.ts  cache.ts  color.ts  console.ts  hierarchy.ts  json.ts  tauri.ts  ttlFetch.ts
src/updates/: main.ts
(+946 files in other folders)
